Corrección de violaciones indicadas por PMD.